--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header id="header-home">
       <div class="container">
         <nav id="main-nav">
-          <img src="img/logo.png" alt="My Portdolio" id="logo" />
+          <img src="img/logo.png" alt="My Portfolio" id="logo" />
           <ul>
             <li><a href="index.html" class="current">Home</a></li>
             <li><a href="about.html">About</a></li>
